--- a/ChordBook/Base.lproj/Main.storyboard
+++ b/ChordBook/Base.lproj/Main.storyboard
@@ -616,8 +616,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="vzL-Y2-1aG" kind="relationship" relationship="viewControllers" id="56o-HI-MhU"/>
                         <segue destination="Dbd-rY-xrs" kind="relationship" relationship="viewControllers" id="QHZ-5R-dSb"/>
+                        <segue destination="vzL-Y2-1aG" kind="relationship" relationship="viewControllers" id="dQs-th-cZz"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k0h-kx-PD7" userLabel="First Responder" sceneMemberID="firstResponder"/>
